<resources>
    <string name="app_name">Калькулятор</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="reset">AC</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="password">пароль</string>
    <string name="night">ночь</string>
    <string name="day">день</string>
    <string name="login">логин</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Новости</string>
</resources>